--- a/app/views/publications.html
+++ b/app/views/publications.html
@@ -42,7 +42,7 @@
     </div>
     <div class="col-md-3 col-md-offset-1">
       <p>
-        <a href="https://bitbucket.org/joapaspe"> <h4>More projects at Bitbucket</h4> <img src="img/jo-bitbucket.jpg" class="img-rounded img-responsive" width="128px"> </a>
+        <a href="https://bitbucket.org/joapaspe"> <h4>More projects at Bitbucket</h4> <img src="images/jo-bitbucket.jpg" class="img-rounded img-responsive" width="128px"> </a>
       </p>
       <p>
         I've been using Bitbuckets for another projects, mostly privates.
