CV files and google analytic

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,7 +17,7 @@
     <div class="pull-right navbar-text">
       joapaspe_at_gmail.com
     </div>
-    <a data-toggle="modal" href="#myModal" class="btn btn-default btn-xs pull-right navbar-text">Changelog!</a>
+    <a data-toggle="modal" data-target="#myModal" class="btn btn-link btn-xs pull-right navbar-text">Changelog!</a>
   </div><!--/.nav-collapse -->
 </div>
 
