--- a/app/views/changelog.html
+++ b/app/views/changelog.html
@@ -13,11 +13,12 @@
         <p>All the webpage have been migrated to Angular JS.
         The webpage looks 99% equal than the previous version, but the source code have changed completely.
         <ul>
-          <li>Using AngularJS and their functionalities to build de webpage</li>
+          <li>Migration to AngularJS and their functionalities to build de webpage</li>
           <li>Source code is well organized, each section is defined in a separated file with their own controller (if needed)</li>
           <li>Bower, grunt (yeoman) for generate the final code and posibility of run tests (karma)</li>
-          <li>Dinamic loading of the pictures, publications and courses which now are stored in a json file.
+          <li>Dinamic loading of the pictures, publications and courses which now are stored in json files.
             This makes the html cleaner and easy to add new elements</li>
+          <li>Angular directives for scroolling and scroll spy</li>
         </ul>
         Other minor issues:
         <ul>
