--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <div class="row" ng-controller="HomeCtrl">
-  <div class="col-md-6 col-md-offset-1">
+  <div class="col-md-6 col-md-offset-1" style="height: 320px">
     <carousel interval="myInterval">
       <slide ng-repeat="picture in pictures" active="picture.active">
         <img ng-src="{{picture.src}}" style="margin:auto;">
