--- a/app/views/publications.html
+++ b/app/views/publications.html
@@ -24,7 +24,7 @@
     <h3> Projects: </h3>
   </div>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-4">
       <p>
         <a href="https://github.com/pakozm/april-ann"> <h4>April-ANN</h4> <img src="images/april.png" class="img-rounded img-responsive" width="128px"></a>
       </p>
@@ -32,7 +32,7 @@
         April-ann toolkit (A Pattern Recognizer In Lua with Artificial Neural Networks). Is a toolkit that incorporates ANN algorithms (as dropout, stacked denoising auto-encoders, convolutional neural networks), with other pattern recognition methods as hiddem makov models (HMMs). I have been using and contributing this amazing tool during my research.
       </p>
     </div>
-    <div class="col-md-3 col-md-offset-1">
+    <div class="col-md-4 col-md-offset-1">
       <p>
         <a href="https://github.com/joapaspe"> <h4>My Projects at Github</h4> <img src="images/jo-github.jpg" class="img-circle img-responsive" width="128px"> </a>
       </p>
@@ -40,9 +40,11 @@
         Some personal projects and other stuff at Github.
       </p>
     </div>
-    <div class="col-md-3 col-md-offset-1">
+    <div class="col-md-2 col-md-offset-1">
       <p>
-        <a href="https://bitbucket.org/joapaspe"> <h4>More projects at Bitbucket</h4> <img src="images/jo-bitbucket.jpg" class="img-rounded img-responsive" width="128px"> </a>
+				<ul>
+        <li><a href="https://bitbucket.org/joapaspe" target="_blank">Bitbucket profile </a></li>
+				</ul>
       </p>
       <p>
         I've been using Bitbuckets for another projects, mostly privates.
