--- a/app/views/personal.html
+++ b/app/views/personal.html
@@ -50,14 +50,14 @@
   I have been member of the Judges and Problem Setters for two Contests:
   <div class="row">
     <div class="col-md-4 col-md-offset-1 text-center">
-      <a href="https://clocalprog.dsic.upv.es"> <h4>ClocalProg</h4> <img src="images/clocalprog.png" class="img-responsive"> </a>
+      <a href="https://clocalprog.dsic.upv.es"> <h4>ClocalProg</h4> <img src="images/logo.png" class="img-responsive"> </a>
 
       <p>
         <i>Competici&oacute;n Local de Programaci&oacute;n</i> is a local contests organized by <a href="">ETSINF</a> (<a href="">UPV</a>),
         where Computer's Degree students participate. The winners are selected to participate on the ACM, regional contest.
 
       </p>
-      <span class="label label-info">2011, 2012, 2013 editions</span>
+      <span class="label label-info">2011, 2012, 2013, 2014 editions</span>
     </div>
 
     <div class="col-md-4 col-md-offset-1 text-center">
