--- a/app/views/changelog.html
+++ b/app/views/changelog.html
@@ -9,6 +9,19 @@
         <h3 class="modal-title">Changelog</h3>
       </div>
       <div class="modal-body">
+        <h3>01/06/2014 Hot Fix Release</h3>
+        After the feedback of some colleagues, some features have been corrected:
+        <ul>
+          <li>Corrected the utf-8 publications problem on the server</li>
+          <li>Translation mistake in CV</li>
+          <li>Minimizer have been deactivated</li>
+          <li>Clocalprog updated to 2014</li>
+        </ul>
+        Other issues:
+        <ul>
+          <li>More pictures!</li>
+        </ul>
+         Thank you Marcos, Mario and Ximo,
         <h3> 20/05/2014 AngularJS Migration!!</h3>
         <p>All the webpage have been migrated to Angular JS.
         The webpage looks 99% equal than the previous version, but the source code have changed completely.
