--- a/app/views/changelog.html
+++ b/app/views/changelog.html
@@ -9,6 +9,10 @@
         <h3 class="modal-title">Changelog</h3>
       </div>
       <div class="modal-body">
+        <h3>14/10/2014</h3>
+          <ul>
+           <li> CV Updates (September) </li> 
+          </ul>
         <h3>01/06/2014 Hot Fix Release</h3>
         After the feedback of some colleagues, some features have been corrected:
         <ul>
