--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <div class="row" ng-controller="HomeCtrl">
-  <div class="col-md-6 col-md-offset-1" style="height: 320px">
+  <!--<div class="col-md-6 col-md-offset-1" style="height: 320px">
     <carousel interval="myInterval">
       <slide ng-repeat="picture in pictures" active="picture.active">
         <img ng-src="{{picture.src}}" style="margin:auto;">
@@ -8,11 +8,11 @@
         </div>
       </slide>
     </carousel>
-  </div>
-  <div class="col-md-4">
-    <div class="page-header">
-      <h1>Joan Pastor Pellicer<h1>
-        </div>
+  </div>-->
+  <div class="col-lg-offset-4 col-md-8">
+      <div class="page-header">
+      <h1>Joan Pastor Pellicer</h1>
+      </div>
         <p></p>
         <p>
           Member of Natural Language Engineering and Pattern Recognition (<a href="http://users.dsic.upv.es/grupos/rfia/rfia.html">ELiRF</a>) Group.
@@ -24,4 +24,54 @@
           <a href="http://blogs.uji.es/hitita/">HITITA</a>: Human-assisted interactive transcription of ancient printed and handwritten documents
         </p>
       </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-offset-2 col-md-4">
+    <address>
+      <strong>Departamento de Sistemes Inform&agrave;tics i Computaci&oacute;</strong>
+      <b>Edificio 1F</b>
+      <br>
+      Universitat Polit&egrave;cnica de Val&egrave;ncia
+      <br>
+      Camino de Vera s/n
+      <br>
+      46022, Valencia, Spain
+      <br>
+      <abbr title="Phone">P:</abbr> +34 963877000 <abbr title="Extension">Ext: 73566</abbr>
+    </address>
+
+    <address>
+      <strong>Joan Pastor Pellicer</strong>
+      <br>
+      jpastor __AT__ dsic.upv.esim
+      <br>
+      joapaspe __AT__ gmail.com
+    </address>
+
+  </div>
+
+  <div class="col-md-4">
+    <h3>Do you wanna hire me?</h3>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="media">
+          <a class="pull-left" href="files/joan-pastor-cv-en.pdf" target="_blank"> <img class="media-object" src="images/pdf.png" width="64"> </a>
+          <div class="media-body">
+            <h4 class="media-heading">My CV...</h4>
+            Last Update: September, 2014.
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="media">
+          <a class="pull-left" href="files/joan-pastor-cv.pdf" target="_blank"> <img class="media-object" src="images/pdf.png" width="64"/> </a>
+          <div class="media-body">
+            <h4 class="media-heading">And in spanish too</h4>
+            Last Update: September, 2014.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
