--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,27 +1,110 @@
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">Joan Pastor</a>
-  </div>
-  <div class="collapse navbar-collapse navbar-menu">
-    <ul class="nav navbar-nav ">
-      <li ng-repeat="section in sections" du-scrollspy="{{section.id}}" offset="54" id="nav-home">
-        <a href="#{{section.id}}" target="_self" du-smooth-scroll offset="54">{{section.title}}</a>
-      </li>
-    </ul>
-
-    <div class="pull-right navbar-text">
-      joapaspe_at_gmail.com
+<header>
+  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Joan Pastor</a>
     </div>
-    <a data-toggle="modal" data-target="#myModal" class="btn btn-link btn-xs pull-right navbar-text">Changelog!</a>
-  </div><!--/.nav-collapse -->
-</div>
+    <div class="collapse navbar-collapse navbar-menu">
+      <ul class="nav navbar-nav ">
+        <li ng-repeat="section in sections" du-scrollspy="{{section.id}}" offset="54" id="nav-home">
+          <a href="#{{section.id}}" target="_self" du-smooth-scroll offset="54">{{section.title}}</a>
+        </li>
+      </ul>
+
+      <div class="pull-right navbar-text">
+        joapaspe_at_gmail.com
+      </div>
+      <a data-toggle="modal" data-target="#myModal" class="btn btn-link btn-xs pull-right navbar-text">Changelog!</a>
+    </div><!--/.nav-collapse -->
+  </nav>
+
+  <div class="home">
+    <div class="row">
+      <!--<div class="col-md-6 col-md-offset-1" style="height: 320px">
+        <carousel interval="myInterval">
+          <slide ng-repeat="picture in pictures" active="picture.active">
+            <img ng-src="{{picture.src}}" style="margin:auto;">
+            <div class="carousel-caption">
+              <h2><a href="{{picture.link}}" target="_blank">{{picture.title}}</a></h2>
+            </div>
+          </slide>
+        </carousel>
+      </div>-->
+
+      <div class="col-lg-offset-2 col-md-8 header-content-inner">
 
 
+          <h1>Joan Pastor Pellicer</h1>
+
+        <p></p>
+        <p>
+          Member of Natural Language Engineering and Pattern Recognition (<a href="http://users.dsic.upv.es/grupos/rfia/rfia.html">ELiRF</a>) Group.
+        </p>
+        <p>
+          PhD. Student at <a href="http://www.upv.es">Universitat Polit&egrave;cnica de Val&egrave;ncia</a>, <a href="http://dsic.upv.es">Departament de Sistemes Inform&agrave;tics i Computaci&oacute;.</a>
+        </p>
+        <p>
+          <a href="http://blogs.uji.es/hitita/">HITITA</a>: Human-assisted interactive transcription of ancient printed and handwritten documents
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-offset-2 col-md-4">
+        <address>
+          <strong>Departamento de Sistemes Inform&agrave;tics i Computaci&oacute;</strong>
+          <b>Edificio 1F</b>
+          <br>
+          Universitat Polit&egrave;cnica de Val&egrave;ncia
+          <br>
+          Camino de Vera s/n
+          <br>
+          46022, Valencia, Spain
+          <br>
+          <abbr title="Phone">P:</abbr> +34 963877000 <abbr title="Extension">Ext: 73566</abbr>
+        </address>
+
+        <address>
+          <strong>Joan Pastor Pellicer</strong>
+          <br>
+          jpastor __AT__ dsic.upv.esim
+          <br>
+          joapaspe __AT__ gmail.com
+        </address>
+
+      </div>
+
+      <div class="col-md-4">
+        <h3>Do you wanna hire me?</h3>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="media">
+              <a class="pull-left" href="files/joan-pastor-cv-en.pdf" target="_blank"> <img class="media-object" src="images/pdf.png" width="64"> </a>
+              <div class="media-body">
+                <h4 class="media-heading">My CV...</h4>
+                Last Update: September, 2014.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="media">
+              <a class="pull-left" href="files/joan-pastor-cv.pdf" target="_blank"> <img class="media-object" src="images/pdf.png" width="64"/> </a>
+              <div class="media-body">
+                <h4 class="media-heading">And in spanish too</h4>
+                Last Update: September, 2014.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</header>
 <div class="main">
   <section ng-repeat="section in sections" id="{{section.id}}">
     <div ng-include="section.view">
@@ -55,6 +138,6 @@
       </div>
 
     </div>
-  
+
   </div>
 </div>
