Fixing style bugs

--- a/app/views/phd.html
+++ b/app/views/phd.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-lg-offset-1 col-lg-5">
+    <div class="visible-md visible-lg col-md-offset-1 col-md-5">
         <img src="images/phd.png" class="img-responsive" alt="Responsive image">
     </div>
-    <div class="col-lg-offset-1 col-lg-4">
+    <div class="col-xs-offset-1 col-xs-4">
         <h2>About my PhD</h2>
         <p>I am focusing my research in text document preprocessing.</p>
         <p>I work on the previous stages before the text OCR, specially in Ancient and Medieval documents which presents more complex data.</p>
