--- a/app/views/main.html
+++ b/app/views/main.html
@@ -54,55 +54,25 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-offset-2 col-md-4">
-        <address>
-          <strong>Departamento de Sistemes Inform&agrave;tics i Computaci&oacute;</strong>
-          <b>Edificio 1F</b>
-          <br>
-          Universitat Polit&egrave;cnica de Val&egrave;ncia
-          <br>
-          Camino de Vera s/n
-          <br>
-          46022, Valencia, Spain
-          <br>
-          <abbr title="Phone">P:</abbr> +34 963877000 <abbr title="Extension">Ext: 73566</abbr>
-        </address>
-
-        <address>
-          <strong>Joan Pastor Pellicer</strong>
-          <br>
-          jpastor __AT__ dsic.upv.esim
-          <br>
-          joapaspe __AT__ gmail.com
-        </address>
-
-      </div>
-
-      <div class="col-md-4">
+      <div class="col-md-offset-4 col-md-4">
         <h3>Do you wanna hire me?</h3>
         <div class="row">
           <div class="col-md-6">
-            <div class="media">
-              <a class="pull-left" href="files/joan-pastor-cv-en.pdf" target="_blank"> <img class="media-object" src="images/pdf.png" width="64"> </a>
-              <div class="media-body">
-                <h4 class="media-heading">My CV...</h4>
-                Last Update: September, 2014.
-              </div>
-            </div>
+            <a href="files/joan-pastor-cv-en.pdf" class="btn btn-primary btn-md">Check my CV</a>
+            <p>
+              <a href="files/joan-pastor-cv.pdf">and in spanish too...</a>
+            </p>
           </div>
           <div class="col-md-6">
-            <div class="media">
-              <a class="pull-left" href="files/joan-pastor-cv.pdf" target="_blank"> <img class="media-object" src="images/pdf.png" width="64"/> </a>
-              <div class="media-body">
-                <h4 class="media-heading">And in spanish too</h4>
-                Last Update: September, 2014.
-              </div>
-            </div>
+            <address>
+              jpastor __AT__ dsic.upv.es
+              <br>
+              joapaspe __AT__ gmail.com
+            </address>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 </header>
 <div class="main">
