Finishing new style.

--- a/app/views/changelog.html
+++ b/app/views/changelog.html
@@ -9,6 +9,17 @@
         <h3 class="modal-title">Changelog</h3>
       </div>
       <div class="modal-body">
+        <h3>28/05/2015 New design and content of the web</h3>
+        Finally I could change the page to something more useful. I removed some data to make the page more readable.
+
+        <ul>
+          <li>New design based on <a href="http://ironsummitmedia.github.io/startbootstrap-creative/#">creative bootstrap template</a></li>
+          <li>A picture of Lausane as landing page</li>
+          <li>New PhD small section. Publications are now shown in a modal interface </li>
+          <li>New design for GitHub, Bitbucket and Programming pages</li>
+          <li>Sport section have been removed</li>
+          <li>Changelog is now called about this page</li>
+        </ul>
         <h3>14/10/2014</h3>
           <ul>
            <li> CV Updates (September) </li> 
@@ -30,7 +41,7 @@
         <p>All the webpage have been migrated to Angular JS.
         The webpage looks 99% equal than the previous version, but the source code have changed completely.
         <ul>
-          <li>Migration to AngularJS and their functionalities to build de webpage</li>
+          <li>Migration to AngularJS and their functionalities to build the webpage</li>
           <li>Source code is well organized, each section is defined in a separated file with their own controller (if needed)</li>
           <li>Bower, grunt (yeoman) for generate the final code and posibility of run tests (karma)</li>
           <li>Dinamic loading of the pictures, publications and courses which now are stored in json files.
