--- a/app/views/social.html
+++ b/app/views/social.html
@@ -1,4 +1,35 @@
 <div class="container">
+  <div class="row">
+    <div class="col-md-offset-1 col-md-2">
+      <a href="#">
+        <i class="fa fa-twitter fa-lg fa-5x"></i>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <a href="#">
+        <i class="fa fa-facebook fa-lg fa-5x"></i>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <a href="#">
+        <i class="fa fa-google-plus fa-lg fa-5x"></i>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <a href="#">
+        <i class="fa fa-github fa-lg fa-5x"></i>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <a href="#">
+        <i class="fa fa-google-plus fa-lg fa-5x"></i>
+      </a>
+    </div>
+  </div>
+
+</div>
+<!--
+<div class="container">
   <div class="page-header">
     <h2>Social</h2>
   </div>
@@ -6,7 +37,7 @@
     <div class="col-md-4">
       <div class="g-person" data-href="//plus.google.com/114143608217887742364" data-rel="author"></div>
 
-      <!-- Place this tag after the last widget tag. -->
+      &lt;!&ndash; Place this tag after the last widget tag. &ndash;&gt;
       <script type="text/javascript">
         (function() {
           var po = document.createElement('script');
@@ -18,11 +49,11 @@
         })();
       </script>
       <p>
-        <!-- Facebook Badge START --><a href="http://www.facebook.com/joapaspe" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Joan Pastor">Joan Pastor</a>
+        &lt;!&ndash; Facebook Badge START &ndash;&gt;<a href="http://www.facebook.com/joapaspe" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Joan Pastor">Joan Pastor</a>
         <br/>
-        <a href="http://www.facebook.com/joapaspe" target="_TOP" title="Joan Pastor"><img src="http://badge.facebook.com/badge/1121859428.3109.531556530.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
+        <a href="http://www.facebook.com/joapaspe" target="_TOP" title="Joan Pastor"><img src="http://badge.facebook.com/badge/1121859428.3109.531556530.png" style="border: 0px;" /></a>&lt;!&ndash; Facebook Badge END &ndash;&gt;
       </p>
-      <!-- Place this tag where you want the widget to render. -->
+      &lt;!&ndash; Place this tag where you want the widget to render. &ndash;&gt;
     </div>
     <div class="col-md-2">
       <p>
@@ -47,4 +78,4 @@
 
     </div>
   </div>
-</div>
+</div>-->
