--- a/app/views/phd.html
+++ b/app/views/phd.html
@@ -8,16 +8,22 @@
         <p>I am focusing my research in text document preprocessing.</p>
         <p>I work on the previous stages before the text OCR, specially in Ancient and Medieval documents which presents more complex data.</p>
         <p>I forgot to mention, that I am using machine learning techniques like Neural Networks and deep learning!</p>
-        <p>This is some topics that I cover in my research:</p>
+        <p>Some topics I cover in my research:</p>
         <ul>
             <li>Document Image cleaning and enhacement</li>
             <li>Text Line Extraction</li>
             <li>Text Line Preprocessing and Normalization</li>
             <li>A bit of decoding...</li>
         </ul>
-        <button type="button" class="center-block btn btn-primary btn-md" data-toggle="modal" data-target="#pubModal">
-            My publications
-        </button>
+
+
+
+        <!--<button type="button" class="center-block btn btn-lg" data-toggle="modal" data-target="#pubModal">
+            <i class="fa fa-book fa-2x">&nbsp;</i>My publications
+        </button>-->
+        <div class="text-center">
+        <h4><a href="" data-toggle="modal" data-target="#pubModal"><i class="fa fa-book fa-2x">&nbsp;</i>My publications</a></h4>
+        </div>
     </div>
 
 </div>
@@ -28,11 +34,9 @@
         <div class="modal-content">
             <div class="container-fluid">
                 <div ng-include="'views/publications.html'"></div>
-
                 </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
             </div>
         </div>
     </div>
