--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,51 +22,48 @@
 </nav>
 <header>
   <div class="home">
-      <div class="text-center">
-
-        <div class="my-name">
-          <h1>Joan Pastor Pellicer</h1>
-        </div>
-        <h4>
-          Member of Natural Language Engineering and Pattern Recognition (<a href="http://users.dsic.upv.es/grupos/rfia/rfia.html">ELiRF</a>) Group.
-        </h4>
-        <h4>
-
-          PhD. Student at <a href="http://www.upv.es">Universitat Polit&egrave;cnica de Val&egrave;ncia</a>, <a href="http://dsic.upv.es">Departament de Sistemes Inform&agrave;tics i Computaci&oacute;.</a>
-        </h4>
-        <h4>
-          Working on <a href="http://blogs.uji.es/hitita/">HITITA</a>: Human-assisted interactive transcription of ancient printed and handwritten documents
-        </h4>
-        </p>
-        </div>
-    </div>
-
     <div class="text-center">
-        <h2>Do you wanna hire me?</h2>
+
+      <div class="my-name">
+        <h1>Joan Pastor Pellicer</h1>
       </div>
-        <div class="row">
-          <div class="col-md-offset-2 col-md-3">
-            <a href="files/joan-pastor-cv-en.pdf" class="btn btn-primary btn-md">Check my CV</a>
-            <p>
-              <a href="files/joan-pastor-cv.pdf">and in spanish too...</a>
-            </p>
-          </div>
-          <div class="col-md-2">
-            <a href="#">
-              <i class="fa fa-linkedin fa-lg fa-3x"></i>
-            </a>
-          </div>
-          <div class="col-md-3">
-            <address>
-              jpastor __AT__ dsic.upv.es
-              <br>
-              joapaspe __AT__ gmail.com
-            </address>
-          </div>
-        </div>
+      <h4>
+        Member of Natural Language Engineering and Pattern Recognition (<a href="http://users.dsic.upv.es/grupos/rfia/rfia.html">ELiRF</a>) Group.
+      </h4>
+      <h4>
+
+        PhD. Student at <a href="http://www.upv.es">Universitat Polit&egrave;cnica de Val&egrave;ncia</a>, <a href="http://dsic.upv.es">Departament de Sistemes Inform&agrave;tics i Computaci&oacute;.</a>
+      </h4>
+      <h4>
+        Working on <a href="http://blogs.uji.es/hitita/">HITITA</a>: Human-assisted interactive transcription of ancient printed and handwritten documents
+      </h4>
+      </p>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 text-center">
+            <h2><a href={{urls.cv_eng}} target=_blank><i class="fa fa-2x fa-newspaper-o wow bounceIn text-primary">&nbsp;</i>CV</a></h2>
+            <a href={{urls.cv}}>and in spanish too...</a>
+
+      </div>
+
+      <div class="col-lg-4 text-center">
+
+            <h2><a href={{urls.linkedin}} target=_blank><i class="fa fa-linkedin-square fa-2x">&nbsp;</i>linkedin</h2></a>
+      </div>
+      <div class="col-lg-4 text-center">
+        <h2><i class="fa fa-2x fa-envelope-o"></i></h2>
+          <p>
+          jpastor __AT__ dsic.upv.es
+          <br>
+          joapaspe __AT__ gmail.com
+          </p>
+        </address>
       </div>
     </div>
   </div>
+
 </header>
 <div class="main">
   <section ng-repeat="section in sections" id="{{section.id}}" class="{{section.style}}">
