--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -1,22 +1,20 @@
-<div class="row">
-<div class="col-md-offset-2 col-md-4">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="images/GitHub-Mark-120px-plus.png" class="img-responsive" alt="github"/>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-offset-4 col-md-4">
-                <img src="images/bitbucket.png" class="img-responsive" alt="github" width="120px"/>
-            </div>
-        </div>
-    </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6  hidden-xs">
 
-    <div class="col-md-4">
-        <h2 class="section-heading">Projects</h2>
-        <p>You can find some of my code in GitHub and Bitbucket.</p>
-        <p>I recommend to take a look to the April-ann (A Pattern Recognizer In Lua with Artificial Neural Networks)
-            wich I have been using and contributing this amazing tool during my research.</p>
+            <p>
+                <a href="{{urls.github}}" target="_blank"><img src="images/GitHub-Mark-120px-plus.png" class="img-responsive center-block" alt="github"/></a>
+            </p>
+            <p>
+                <a href="{{urls.bitbucket}}" target="_blank"><img src="images/bitbucket.png" class="img-responsive center-block" alt="github" width="120px"/></a>
+            </p>
+        </div>
+        <div class="col-md-6 col-xs-12">
+            <h2 class="section-heading">Projects</h2>
+            <p>You can find some of my code in <a href="{{urls.github}}" target="_blank">GitHub</a> and <a href="{{urls.bitbucket}}" target="_blank">Bitbucket</a>.</p>
+            <p>I recommend to take a look to the <a href="{{urls.april_ann}}" target="_blank">April-ann</a>(A Pattern Recognizer In Lua with Artificial Neural Networks)
+                which I have been using and contributing this amazing tool during my research.</p>
+        </div>
     </div>
 </div>
 
