--- a/app/views/changelog.html
+++ b/app/views/changelog.html
@@ -6,6 +6,10 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
           &times;
         </button>
+        <p>I use this webpage for trying and get fun with new technologies. I build this webpage from the scratch using mainly
+        AngularJs, bootstrap and other libraries. The code of the webpage is also available
+          <a href="{{urls.webcode}}">here</a>.
+        </p>
         <h3 class="modal-title">Changelog</h3>
       </div>
       <div class="modal-body">
