--- a/app/views/social.html
+++ b/app/views/social.html
@@ -1,30 +1,30 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-offset-1 col-md-2">
-      <a href="#">
-        <i class="fa fa-twitter fa-lg fa-5x"></i>
-      </a>
+    <div class="col-lg-offet-2 col-xs-6 col-lg-2 center-block service-box text-center">
+      <a href="{{urls.twitter}}" target="_blank"><i class="fa fa-twitter fa-lg fa-5x"></i></a>
     </div>
-    <div class="col-md-2">
-      <a href="#">
+    <div class="col-xs-3 col-lg-2 center-block service-box text-center">
+      <a href="{{urls.facebook}}" target="_blank">
         <i class="fa fa-facebook fa-lg fa-5x"></i>
       </a>
     </div>
-    <div class="col-md-2">
-      <a href="#">
+    <div class="col-xs-6 col-lg-2 center-block service-box text-center">
+      <a href="{{urls.linkedin}}" target="_blank">
+        <i class="fa fa-linkedin fa-lg fa-5x"></i>
+      </a>
+    </div>
+    <div class="col-xs-3 col-lg-2 center-block service-box text-center">
+      <a href="{{urls.plus}}" target="_blank">
         <i class="fa fa-google-plus fa-lg fa-5x"></i>
       </a>
     </div>
-    <div class="col-md-2">
-      <a href="#">
+
+    <div class="col-xs-3 col-lg-2 center-block service-box text-center">
+      <a href="{{urls.github}}" target="_blank">
         <i class="fa fa-github fa-lg fa-5x"></i>
       </a>
     </div>
-    <div class="col-md-2">
-      <a href="#">
-        <i class="fa fa-google-plus fa-lg fa-5x"></i>
-      </a>
-    </div>
+
   </div>
 
 </div>
@@ -34,7 +34,7 @@
     <h2>Social</h2>
   </div>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-xs-4">
       <div class="g-person" data-href="//plus.google.com/114143608217887742364" data-rel="author"></div>
 
       &lt;!&ndash; Place this tag after the last widget tag. &ndash;&gt;
@@ -55,14 +55,14 @@
       </p>
       &lt;!&ndash; Place this tag where you want the widget to render. &ndash;&gt;
     </div>
-    <div class="col-md-2">
+    <div class="col-xs-2">
       <p>
         <a href="http://es.linkedin.com/in/joapaspe"> <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" border="0" alt="View Joan Pastor Pellicer's profile on LinkedIn"> </a>
       </p>
 
     </div>
 
-    <div class="col-md-6">
+    <div class="col-xs-6">
       <a class="twitter-timeline" href="https://twitter.com/joan_batiste" data-widget-id="351015601390624769">Tweets by @joan_batiste</a>
       <script>
         ! function(d, s, id) {
