--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,7 +17,8 @@
     <div class="pull-right navbar-text">
       joapaspe_at_gmail.com
     </div>
-    <a data-toggle="modal" data-target="#myModal" class="btn btn-link btn-xs pull-right navbar-text">About this page</a>
+    <span class="pull-right navbar-text"><a class="btn btn-xs btn-link" btn-xs data-toggle="modal" data-target="#myModal">About this page </a>
+      <a href="{{urls.webcode}}" target="_blank"><i class="fa fa-lg fa-github-square pull-right "></i></a></span>
   </div><!--/.nav-collapse -->
 </nav>
 <header>
