--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -1,18 +1,22 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6  hidden-xs">
+        <div class="col-md-6  hidden-xs text-center">
 
             <p>
-                <a href="{{urls.github}}" target="_blank"><img src="images/GitHub-Mark-120px-plus.png" class="img-responsive center-block" alt="github"/></a>
+                <a href="{{urls.github}}" target="_blank">
+                <!--    <img src="images/GitHub-Mark-64px.png" class="img-responsive center-block" alt="github"/>-->
+                    <i class="fa fa-5x fa-github"></i>
+                </a>
             </p>
             <p>
-                <a href="{{urls.bitbucket}}" target="_blank"><img src="images/bitbucket.png" class="img-responsive center-block" alt="github" width="120px"/></a>
+                <i class="fa fa-5x fa-bitbucket-square"></i>
+                <!--<a href="{{urls.bitbucket}}" target="_blank"><img src="images/bitbucket.png" class="img-responsive center-block" alt="github" width="64px"/></a>-->
             </p>
         </div>
         <div class="col-md-6 col-xs-12">
             <h2 class="section-heading">Projects</h2>
             <p>You can find some of my code in <a href="{{urls.github}}" target="_blank">GitHub</a> and <a href="{{urls.bitbucket}}" target="_blank">Bitbucket</a>.</p>
-            <p>I recommend to take a look to the <a href="{{urls.april_ann}}" target="_blank">April-ann</a>(A Pattern Recognizer In Lua with Artificial Neural Networks)
+            <p>I recommend to take a look to the <a href="{{urls.april_ann}}" target="_blank">April-ann</a> (A Pattern Recognizer In Lua with Artificial Neural Networks)
                 which I have been using and contributing this amazing tool during my research.</p>
         </div>
     </div>
