--- a/app/views/home.html
+++ b/app/views/home.html
@@ -21,8 +21,9 @@
           PhD. Student at <a href="http://www.upv.es">Universitat Polit&egrave;cnica de Val&egrave;ncia</a>, <a href="http://dsic.upv.es">Departament de Sistemes Inform&agrave;tics i Computaci&oacute;.</a>
         </p>
         <p>
-          <a href="http://blogs.uji.es/hitita/">HITITA</a>: Human-assisted interactive transcription of ancient printed and handwritten documents
+          <a href="http://blogs.uji.es/hitita/">HITITA: Human-assisted interactive transcription of ancient printed and handwritten documents</a>
         </p>
+
       </div>
   </div>
 </div>
