--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,6 +37,9 @@
       <h4>
         Working on <a href="http://blogs.uji.es/hitita/">HITITA</a>: Human-assisted interactive transcription of ancient printed and handwritten documents
       </h4>
+      <h4>
+        <a href="http://etsinf.upv.es">Computer Science Engineer by the Escuela T&eacute;cnica Superior de Ingenier&iacute;a Inform&aacute;tica</a>
+      </h4>
       </p>
     </div>
   </div>
