--- a/app/views/coding.html
+++ b/app/views/coding.html
@@ -39,17 +39,23 @@
     <div class="col-md-4">
         <div class="row">
             <div class="col-md-6">
-                <img  src="images/uvajudge.png" class="img-responsive" alt="Uva Online Judge"/>
+                <a href="http://uhunt.felix-halim.net/id/135046" target="_blank">
+                    <img  src="images/uvajudge.png" class="img-responsive" alt="Uva Online Judge"/>
+                </a>
             </div>
         </div>
         <div class="row">
+            <a href={{urls.uva}} target="_blank">
             <div class="col-md-offset-6 col-md-6">
                 <img src="images/codeforces.png" class="img-responsive text-center pagination-centered" alt="Codeforces"/>
             </div>
+            </a>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="images/clocalprog2014.png" class="img-responsive text-center pagination-centered" alt="CLocalProg"/>
+                <a href="{{urls.clocalprog}}" target="_blank">
+                    <img src="images/clocalprog2014.png" class="img-responsive text-center pagination-centered" alt="CLocalProg"/>
+                </a>
             </div>
         </div>
     </div>
