--- a/app/views/changelog.html
+++ b/app/views/changelog.html
@@ -13,7 +13,14 @@
         <h3 class="modal-title">Changelog</h3>
       </div>
       <div class="modal-body">
-        <h3>28/05/2015 New design and content of the web</h3>
+        <h4>07/06/2014</h4>
+        <ul>
+          <li>Animations! Wow library to add some fancy animation.</li>
+          <li>Minor style changes for better reading.</li>
+          <li>Domain aquired, now it is possible to access to the web page from: <a ng-href="{{urls.joan}}">{{urls.joan}}</a></li>
+          <li>Minor cv updated</li>
+        </ul>
+        <h3>28/04/2015 New design and content of the web</h3>
         Finally I could change the page to something more useful. I removed some data to make the page more readable.
 
         <ul>
