--- a/app/views/home.html
+++ b/app/views/home.html
@@ -10,21 +10,21 @@
     </carousel>
   </div>-->
   <div class="col-lg-offset-4 col-md-8">
-      <div class="page-header">
+    <div class="page-header">
       <h1>Joan Pastor Pellicer</h1>
-      </div>
-        <p></p>
-        <p>
-          Member of Natural Language Engineering and Pattern Recognition (<a href="http://users.dsic.upv.es/grupos/rfia/rfia.html">ELiRF</a>) Group.
-        </p>
-        <p>
-          PhD. Student at <a href="http://www.upv.es">Universitat Polit&egrave;cnica de Val&egrave;ncia</a>, <a href="http://dsic.upv.es">Departament de Sistemes Inform&agrave;tics i Computaci&oacute;.</a>
-        </p>
-        <p>
-          <a href="http://blogs.uji.es/hitita/">HITITA: Human-assisted interactive transcription of ancient printed and handwritten documents</a>
-        </p>
-
-      </div>
+    </div>
+    <div class="joan-info">
+      <p></p>
+      <p>
+        Member of Natural Language Engineering and Pattern Recognition (<a href="http://users.dsic.upv.es/grupos/rfia/rfia.html">ELiRF</a>) Group.
+      </p>
+      <p>
+        PhD. Student at <a href="http://www.upv.es">Universitat Polit&egrave;cnica de Val&egrave;ncia</a>, <a href="http://dsic.upv.es">Departament de Sistemes Inform&agrave;tics i Computaci&oacute;.</a>
+      </p>
+      <p>
+        <a href="http://blogs.uji.es/hitita/">HITITA: Human-assisted interactive transcription of ancient printed and handwritten documents</a>
+      </p>
+    </div>
   </div>
 </div>
 <div class="row">
