--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -5,11 +5,11 @@
             <p>
                 <a href="{{urls.github}}" target="_blank">
                 <!--    <img src="images/GitHub-Mark-64px.png" class="img-responsive center-block" alt="github"/>-->
-                    <i class="fa fa-5x fa-github"></i>
+                    <i class="fa fa-5x fa-github wow flip" data-wow-delay="500ms"></i>
                 </a>
             </p>
             <p>
-                <i class="fa fa-5x fa-bitbucket-square"></i>
+                <i class="fa fa-5x fa-bitbucket-square wow flip" data-wow-delay="500ms"></i>
                 <!--<a href="{{urls.bitbucket}}" target="_blank"><img src="images/bitbucket.png" class="img-responsive center-block" alt="github" width="64px"/></a>-->
             </p>
         </div>
