--- a/app/views/social.html
+++ b/app/views/social.html
@@ -1,25 +1,25 @@
 <div class="container">
-  <div class="row">
-    <div class="col-lg-offet-2 col-xs-6 col-lg-2 center-block service-box text-center">
+  <div class="row wow">
+    <div class="col-lg-offet-2 col-xs-6 col-lg-2 center-block service-box text-center wow bounceIn" data-wow-delay="500ms">
       <a href="{{urls.twitter}}" target="_blank"><i class="fa fa-twitter fa-lg fa-5x"></i></a>
     </div>
-    <div class="col-xs-3 col-lg-2 center-block service-box text-center">
+    <div class="col-xs-3 col-lg-2 center-block service-box text-center wow bounceIn" data-wow-delay="600ms">
       <a href="{{urls.facebook}}" target="_blank">
         <i class="fa fa-facebook fa-lg fa-5x"></i>
       </a>
     </div>
-    <div class="col-xs-6 col-lg-2 center-block service-box text-center">
+    <div class="col-xs-6 col-lg-2 center-block service-box text-center wow bounceIn" data-wow-delay="700ms">
       <a href="{{urls.linkedin}}" target="_blank">
         <i class="fa fa-linkedin fa-lg fa-5x"></i>
       </a>
     </div>
-    <div class="col-xs-3 col-lg-2 center-block service-box text-center">
+    <div class="col-xs-3 col-lg-2 center-block service-box text-center wow bounceIn" data-wow-delay="800ms">
       <a href="{{urls.plus}}" target="_blank">
         <i class="fa fa-google-plus fa-lg fa-5x"></i>
       </a>
     </div>
 
-    <div class="col-xs-3 col-lg-2 center-block service-box text-center">
+    <div class="col-xs-3 col-lg-2 center-block service-box text-center wow bounceIn" data-wow-delay="900ms">
       <a href="{{urls.github}}" target="_blank">
         <i class="fa fa-github fa-lg fa-5x"></i>
       </a>
