--- a/app/views/phd.html
+++ b/app/views/phd.html
@@ -1,6 +1,6 @@
 <div class="container">
 <div class="row">
-    <div class="visible-md visible-lg  col-md-6">
+    <div class="visible-md visible-lg  col-md-6 wow bounceInLeft" >
         <img src="images/phd.png" class="img-responsive" alt="Phd">
     </div>
     <div class="col-sm-12 col-md-6">
