--- a/app/views/changelog.html
+++ b/app/views/changelog.html
@@ -19,6 +19,7 @@
           <li>Minor style changes for better reading.</li>
           <li>Domain aquired, now it is possible to access to the web page from: <a ng-href="{{urls.joan}}">{{urls.joan}}</a></li>
           <li>Minor cv updated</li>
+          <li>Modifications on the grunt build system</li>
         </ul>
         <h3>28/04/2015 New design and content of the web</h3>
         Finally I could change the page to something more useful. I removed some data to make the page more readable.
