--- a/app/views/main.html
+++ b/app/views/main.html
@@ -29,7 +29,7 @@
                 <h1>Joan Pastor Pellicer</h1>
             </div>
             <div class="joan-info">
-                <h3>
+                <h3 class="joan-info-dark">
                     Member of Natural Language Engineering and Pattern Recognition (<a href="http://users.dsic.upv.es/grupos/rfia/rfia.html">ELiRF</a>) Group.
                 </h3>
                 <h3>
